--- a/scripts/process_bias_bios_data.ipynb
+++ b/scripts/process_bias_bios_data.ipynb
@@ -169,15 +169,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('bias_bios_train.txt') as f:\n",
+    "with open('bias_bios_train.txt', 'w') as f:\n",
     "    for t in train_texts:\n",
-    "        f.write(t.strip()+'\\n')\n",
-    "        "
+    "        f.write(t.strip()+'\\n')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('bias_bios_validation.txt', 'w') as f:\n",
+    "    for t in valid_texts:\n",
+    "        f.write(t.strip()+'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('bias_bios_test.txt', 'w') as f:\n",
+    "    for t in test_texts:\n",
+    "        f.write(t.strip()+'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mv *.txt /usr1/datasets/sumita/comp-ethics/project/JustiSparse/composable-sft/corpora/cda/."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
