--- a/scripts/process_bias_bios_data.ipynb
+++ b/scripts/process_bias_bios_data.ipynb
@@ -4,60 +4,141 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sumita/miniconda3/envs/ethics-2/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from datasets import load_dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using custom data configuration default-eb908d68f136bd98\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading and preparing dataset parquet/default to /home/sumita/.cache/huggingface/datasets/parquet/default-eb908d68f136bd98/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading data files: 100%|██████████| 3/3 [00:00<00:00, 7315.65it/s]\n",
-      "Extracting data files: 100%|██████████| 3/3 [00:00<00:00, 1571.10it/s]\n",
-      "                                 \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset parquet downloaded and prepared to /home/sumita/.cache/huggingface/datasets/parquet/default-eb908d68f136bd98/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec. Subsequent calls will reuse this data.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 3/3 [00:00<00:00, 573.07it/s]\n"
+      "Found cached dataset parquet (/home/sumita/.cache/huggingface/datasets/parquet/default-eb908d68f136bd98/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec)\n",
+      "100%|██████████| 3/3 [00:00<00:00, 50.39it/s]\n"
      ]
     }
    ],
    "source": [
     "train_file = load_dataset('parquet', data_files={\n",
-    "    'train' : 'JustiSparse/data/bias-bios/biasbios_train.pq', \n",
-    "    'validation' : 'JustiSparse/data/bias-bios/biasbios_val.pq',\n",
-    "    'test' : 'JustiSparse/data/bias-bios/biasbios_test.pq'}\n",
+    "    'train' : '../data/bias-bios/biasbios_train.pq', \n",
+    "    'validation' : '../data/bias-bios/biasbios_val.pq',\n",
+    "    'test' : '../data/bias-bios/biasbios_test.pq'}\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Creating json from Arrow format: 100%|██████████| 256/256 [00:05<00:00, 48.38ba/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "462586453"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_file['train'].to_json(\"../data/bias-bios/biasbios_train.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Creating json from Arrow format: 100%|██████████| 40/40 [00:00<00:00, 48.13ba/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "67708873"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_file['validation'].to_json(\"../data/bias-bios/biasbios_val.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Creating json from Arrow format: 100%|██████████| 99/99 [00:02<00:00, 44.97ba/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "184959051"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_file['test'].to_json(\"../data/bias-bios/biasbios_test.jsonl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'_ has been working with children in camp, community and school settings for the past 8 years. _ believes in the importance of cultivating self-love and awareness in black children at a very young age and is excited to be apart of Black Lives Matter Toronto’s Freedom School!'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_file['train']['text_without_gender'][0]"
    ]
   },
   {
@@ -236,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
