--- a/scripts/process_bias_bios_data.ipynb
+++ b/scripts/process_bias_bios_data.ipynb
@@ -269,13 +269,6 @@
    "source": [
     "!mv *.txt /usr1/datasets/sumita/comp-ethics/project/JustiSparse/composable-sft/corpora/cda/."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -283,9 +276,9 @@
    "hash": "8f57b6b4c8b638771122be8cd6caea81693a642f8ff1e2f7272c818ad7a1b9c2"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('pt-compose')",
+   "display_name": "Python (pt-compose)",
    "language": "python",
-   "name": "python3"
+   "name": "pt-compose"
   },
   "language_info": {
    "codemirror_mode": {
@@ -297,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
