Added changes for tir

--- a/scripts/process_bias_bios_data.ipynb
+++ b/scripts/process_bias_bios_data.ipynb
@@ -269,6 +269,58 @@
    "source": [
     "!mv *.txt /usr1/datasets/sumita/comp-ethics/project/JustiSparse/composable-sft/corpora/cda/."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "train_data = [json.loads(d) for d in open('../data/gab/train.jsonl')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_hate = [d['text'] for d in train_data if d['label'] == 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['The left hate white people,hate America,hate christian but love MS13,hamas,transgender for kids,pedophilia,etc...',\n",
+       " \"What how quick\\xa0Mexico shuts down the MS-13 rat line, of course this will have no effect on their drug smuggling operations. You really don't think the Mexican Gov. isn't knee deep in bed with the drug dealers do ya ?\",\n",
+       " \"The only person you showed to be full of shit was yourself, and I don't care if you believe me or not. You beliefs don't change reality.\",\n",
+       " 'well kiddo, i would rather be called an idiot by a troll like you than be called a fucktard by a man like me. good luck in your momas basement, son',\n",
+       " 'SUPPORT THE RAM 4. FREE THE RAM 4!\\xa0  RISE ABOVE MOVEMENT!  FBI & DOJ BIAS SHAME AGAIN.  THE TERM \"RACIST\" HAS LOST ALL ITS SCARE IMPACT NOW. TO THE LEFT, IF U R WHITE, U R A RACIST AUTOMATICALLY NOW! YES, EVEN U LEFTIST ARE PERCEIVED BY YOUR PARTY AS A RACIST NOW! \\xa0  WELCOME TO THE CLUB!']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('random.txt', 'w') as f:\n",
+    "    for h in train_hate:\n",
+    "        f.write(h + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
